error validator html index section replace by form for paris, belleville

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
         </div>
     </header>
     <main>
-        <section class="location">
+        <form class="location">
             <div class="header__wrapper-search">
                 <i class="fas fa-map-marker-alt"></i>
                 <input type="text" id="name" name="q" placeholder="Paris, Belleville" size="13">
             </div>
-        </section>
+        </form>
         <section class="informations">
             <h1 class="informations__title">Réservez le menu qui vous convient</h1>
             <p>Découvrez des restaurants d'exeception, séléctionnés par nos soins.</p>
