--- a/restaurants/le-delice-des-sens.html
+++ b/restaurants/le-delice-des-sens.html
@@ -120,9 +120,9 @@
                 </li>
             </ul>
         </section>
-        <section class="bouton">
+        <div class="bouton">
             <a class="btn btn--large" href="#">Commander</a>
-        </section>
+        </div>
     </main>
     <footer class="footer">
         <h2 class="footer__title">ohmyfood</h2>
